syntax = "proto3";
option go_package = "/proto_gen";
import "google/protobuf/timestamp.proto";

message Order{
  int32 id =1   ; 
  double total_price = 2;
  int32 user_id = 3;
  google.protobuf.Timestamp created_at =4;
  google.protobuf.Timestamp updated_at =5 ;
  repeated OrderItem order_items = 6;
}
message OrderItem{
  int32 id =1   ; 
  int32 order_id =  2;
  int32 product_id = 3;
  int32 amount = 4;
  double price = 5;
}


service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
}

message CreateOrderRequest {
  Order order = 1;
  repeated OrderItem order_items = 2;
}

message CreateOrderResponse { 
}

message GetOrderRequest {
  int32 order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message GetOrdersRequest {
   int32 limit = 1;
   int32 offset = 2;
}
message GetOrdersResponse{
  repeated Order orders = 1;
}